--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   build-gradle:
     name: Build
     # Run on external PRs, but not on internal PRs since those will be run by push to branch
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ARM64]
     outputs:
       code-version: ${{ steps.extract.outputs.CODE_VERSION }}
     steps:
@@ -24,6 +24,9 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/actions/wrapper-validation@v3
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
       - name: Gradle Setup
         uses: gradle/actions/setup-gradle@v3
         with:
@@ -34,7 +37,7 @@ jobs:
         run: echo "CODE_VERSION=$(awk -F= '$1~/VERSION_NAME/{print $2}' gradle.properties)" >> $GITHUB_OUTPUT
 
   unit-tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ARM64]
     needs: [ build-gradle ]
     permissions:
       contents: read
@@ -57,7 +60,7 @@ jobs:
           arguments: test --full-stacktrace
 
   android-tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ARM64]
     timeout-minutes: 35
     needs: [ build-gradle, unit-tests ]
     strategy:
@@ -121,38 +124,38 @@ jobs:
           disable-animations: true
           script: ./gradlew connectedCheck --stacktrace
 
-  publish-to-snapshot:
-    name: Publish SNAPSHOT to sonatype.org
-    needs: [ android-tests ]
-    # Runs only in main
-    if: github.event_name != 'pull_request' && endsWith(needs.build-gradle.outputs.code-version, '-SNAPSHOT') && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release')) &&  github.repository_owner == 'eu-digital-identity-wallet'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
+  # publish-to-snapshot:
+  #   name: Publish SNAPSHOT to sonatype.org
+  #   needs: [ android-tests ]
+  #   # Runs only in main
+  #   if: github.event_name != 'pull_request' && endsWith(needs.build-gradle.outputs.code-version, '-SNAPSHOT') && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release')) &&  github.repository_owner == 'eu-digital-identity-wallet'
+  #   runs-on: [self-hosted, ARM64]
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
 
-      - name: Checkout the code
-        uses: actions/checkout@v4
+  #     - name: Checkout the code
+  #       uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: "temurin"
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         java-version: 17
+  #         distribution: "temurin"
 
-      - name: Validate Gradle Wrapper
-        uses: gradle/actions/wrapper-validation@v3
+  #     - name: Validate Gradle Wrapper
+  #       uses: gradle/actions/wrapper-validation@v3
 
-      - name: Publish with Gradle Wrapper
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: publishAllPublicationsToMavenCentral --full-stacktrace
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_REF_NAME: ${{ github.ref_name }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.OSSRH_GPG_KEY_ID }}
-          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.OSSRH_GPG_PASSPHRASE }}
-          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
-          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_PASSWORD }}
+  #     - name: Publish with Gradle Wrapper
+  #       uses: gradle/actions/setup-gradle@v3
+  #       with:
+  #         arguments: publishAllPublicationsToMavenCentral --full-stacktrace
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         GIT_REF_NAME: ${{ github.ref_name }}
+  #         ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.OSSRH_GPG_KEY_ID }}
+  #         ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
+  #         ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.OSSRH_GPG_PASSPHRASE }}
+  #         ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
+  #         ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_PASSWORD }}
