Add sdjwt handling

--- a/wallet-core/build.gradle
+++ b/wallet-core/build.gradle
@@ -158,6 +158,9 @@ dependencies {
     api libs.upokecenter.cbor
     api libs.cose.java
 
+    //sdjwt
+    api libs.eudi.lib.jvm.sdjwt.kt
+
     testImplementation libs.junit
     testImplementation libs.junit.jupiter.params
     testImplementation libs.json
